namespaces/live.cloud-platform.service.justice.gov.uk/js-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "js-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "js-development"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/js-development"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: "2025-12-30"
